Fix heading spacing

--- a/src/postcss/wp/widgets.css
+++ b/src/postcss/wp/widgets.css
@@ -41,6 +41,7 @@
 }
 
 .widget__title {
+	margin-top: 0;
 	margin-bottom: 0.5em;
 	text-transform: uppercase;
 	font-weight: var(--font-bold);
